package patterndesign.behavioral.command;

/**
 * <p>Description: </p>
 * <p>@author: Created by yangzying</p>.
 * <p>@Date: 2017/7/24.</p>
 */
public interface Group {
	void find();
	void add();
	void delete();
	void change();
	void plan();
}
